# v-individual-model

./: Cargo.toml  README.md  individual.md
doc/: README.md  api.md  architecture.md  datatypes.md  examples.md  migration.md  serialization.md
src/onto/: cbor2individual.rs  datatype.rs  individual.rs  individual2json.rs  individual2msgpack.rs  individual2turtle.rs  json2individual.rs  mod.rs  msgpack2individual.rs  onto_impl.rs  onto_index.rs  parser.rs  resource.rs  turtle_formatters_with_prefixes.rs
