[package]
name = "v-individual-model"
version = "0.2.1"
edition = "2021"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
description = "individual model, part of the veda platform"
license     = "MIT"

[dependencies]
rmp = "^0.8"
derivative = "2.1.1"
chrono = "0.4.19"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "=1.36"
v-cbr-codec = "0.7.1"
num = "0.4.0"
num-traits = "0.2.14"
rio_turtle = "0.5.3"
rio_api = "0.5.3"
iri-string = "0.7.0"
bincode = "1.2.1"

log = "0.4"
base64 = "0.22.1"
